Migrate Verity control plane to Go
